tapps-io/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: tapps-io
  namespace: default
  annotations:
    kubernetes.io/ingress.class: 'nginx'
    cert-manager.io/cluster-issuer: 'letsencrypt-prod'
  labels:
    app: tapps-io
spec:
  tls:
    - hosts:
        - tapps.io
        - cms.tapps.io
      secretName: tapps-tls
  rules:
    - host: tapps.io
    - host: cms.tapps.io
